force-app/main/default/objects/Onboarding_Visit__c/Onboarding_Visit__c.object-meta.xml
<CustomObject>
    <description>A facility onboarding visit. The scheduling component&apos;s own record, so a visit can carry several providers - standard Event cannot (Salesforce allows only one Activity lookup per object, and Event cannot be a lookup target). A shadow Event is written alongside for native calendar visibility.</description>
    <label>Onboarding Visit</label>
    <nameField>
        <displayFormat>OV-{00000}</displayFormat>
        <label>Visit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>