force-app/main/default/objects/Onboarding_Visit__c/fields/Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Facilitator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Facilitator attending the visit. Facilitators carry no licensing or programme restriction - availability is the only filter.</description>
    <label>Facilitator</label>
    <referenceTo>Facilitator__c</referenceTo>
    <relationshipLabel>Onboarding Visits</relationshipLabel>
    <relationshipName>Onboarding_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>