force-app/main/default/objects/Onboarding_Visit__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The facility being onboarded. Drives the state used for provider licensing.</description>
    <label>Facility</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>Onboarding Visits</relationshipLabel>
    <relationshipName>Onboarding_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>