force-app/main/default/objects/Onboarding_Visit__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>Programme being delivered at this visit. Drives provider eligibility against the licence for the facility&apos;s state.</description>
    <label>Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TCM</fullName>
            </value>
            <value>
                <fullName>CCM</fullName>
            </value>
            <value>
                <fullName>BHI</fullName>
            </value>
            <value>
                <fullName>CoCM</fullName>
            </value>
            <value>
                <fullName>Telepsych</fullName>
            </value>
            <value>
                <fullName>After Hours Telehealth</fullName>
            </value>
            <value>
                <fullName>Community Full-Time</fullName>
            </value>
            <value>
                <fullName>IPV Onboarding</fullName>
            </value>
            <value>
                <fullName>APCM</fullName>
                <isActive>false</isActive>
                <label>APCM</label>
            </value>
            <value>
                <fullName>RPM</fullName>
                <isActive>false</isActive>
                <label>RPM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>