force-app/main/default/objects/Onboarding_Visit__c/fields/Programs__c.field-meta.xml
<CustomField>
    <fullName>Programs__c</fullName>
    <description>Programmes being delivered at this visit. Replaces the single-value Program field: a visit can cover more than one programme, and every one of them is checked against the provider&apos;s licence for the facility&apos;s state.</description>
    <label>Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TCM</fullName>
            </value>
            <value>
                <fullName>CCM</fullName>
            </value>
            <value>
                <fullName>BHI</fullName>
            </value>
            <value>
                <fullName>CoCM</fullName>
            </value>
            <value>
                <fullName>Telepsych</fullName>
            </value>
            <value>
                <fullName>After Hours Telehealth</fullName>
            </value>
            <value>
                <fullName>Community Full-Time</fullName>
            </value>
            <value>
                <fullName>IPV Onboarding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>