force-app/main/default/objects/Onboarding_Visit__c/fields/Shadow_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Shadow_Event_Id__c</fullName>
    <description>Id of the standard Event mirroring this visit on the native calendar. Written by the scheduling controller; the visit is the source of truth, the Event is derived.</description>
    <label>Shadow Event Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>